welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur){
  setDirection(Direction.EAST)
  while (!estSurBiscuit){
    avance()
  }
  prendBiscuit()
  setDirection(Direction.WEST)
  while (!estSurBiscuit){
    avance()
  }
  recule()
  poseBiscuit()
}

droite()
avance()
gauche()
avance()